# lektor-git-timestamp

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  LICENSE  MANIFEST.in  README.md  lektor_git_timestamp.py  pdm_build.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  tests.yml
tests/: conftest.py  test_functional.py  test_plugin.py
tests/test-site/: Test Site.lektorproject
tests/test-site/models/: page.ini
