[metadata]
name = lektor-git-timestamp
description = Lektor type to deduce page modification time from git
long_description = file: README.md, CHANGES.md
long_description_content_type = text/markdown
url = https://github.com/dairiki/lektor-git-timestamp
author = Jeff Dairiki
author_email = dairiki@dairiki.org
keywords = Lektor plugin
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Plugins
    Environment :: Web Environment
    Framework :: Lektor
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Version Control :: Git
    Topic :: Text Processing

[options]
py_modules = lektor_git_timestamp
install_requires =
    lektorlib
setup_requires =
    setuptools >= 40
    setuptools_scm

[options.entry_points]
lektor.plugins =
    git-timestamp = lektor_git_timestamp:GitTimestampPlugin

[bdist_wheel]
universal = 1
